--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
-{% block title %}Login - Modern Bank{% endblock %}
-{% block main_content %}
 
+{% block title %}Login - Modern Bank{% endblock %}
+
+{% block main_content %}
 <div class="min-h-screen flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
     <div class="max-w-md w-full space-y-8">
         <div>
@@ -10,7 +11,7 @@
             </h2>
             <p class="mt-2 text-center text-sm text-gray-600">
                 Or
-                <a href="{{ url_for('auth.register_page') }}" class="font-medium text-blue-600 hover:text-blue-500">
+                <a href="{{ url_for('auth.register') }}" class="font-medium text-blue-600 hover:text-blue-500">
                     create a new account
                 </a>
             </p>
@@ -43,7 +44,7 @@
             {% endif %}
         {% endwith %}
 
-        <form class="mt-8 space-y-6" id="loginForm">
+        <form class="mt-8 space-y-6" method="POST" id="loginForm">
             {{ form.csrf_token }}
             <div class="rounded-md shadow-sm -space-y-px">
                 <div>
@@ -80,8 +81,7 @@
             </div>
 
             <div>
-                <button type="submit"
-                        class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+                <button type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
                     <span class="absolute left-0 inset-y-0 flex items-center pl-3">
                         <svg class="h-5 w-5 text-blue-500 group-hover:text-blue-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                             <path fill-rule="evenodd" d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z" clip-rule="evenodd" />
@@ -95,7 +95,6 @@
         <div id="errorMessage" class="mt-2 text-center text-sm text-red-600 hidden"></div>
     </div>
 </div>
-
 {% endblock %}
 
 {% block extra_js %}
