--- a/app/templates/accounts/list.html
+++ b/app/templates/accounts/list.html
@@ -51,9 +51,8 @@
                                 </span>
                             </td>
                             <td>{{ account.created_at.strftime('%Y-%m-%d') }}</td>
-                            <td class="flex justify-center space-x-2">
-                                <a href="{{ url_for('accounts.get_account_details', account_id=account.id) }}" 
-                                   class="text-blue-600 hover:text-blue-900 font-medium">
+                            <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
+                                <a href="{{ url_for('accounts.get_account_details', account_id=account.id) }}" class="text-indigo-600 hover:text-indigo-900">
                                     View Details
                                 </a>
                             </td>
